E4/parser.output
Terminals unused in grammar

    TK_PR_THEN
    TK_PR_FOREACH
    TK_PR_SWITCH
    TK_PR_CASE
    TK_PR_CLASS
    TK_PR_PRIVATE
    TK_PR_PUBLIC
    TK_PR_PROTECTED
    TK_PR_END
    TK_PR_DEFAULT
    TOKEN_ERRO


Grammar

    0 $accept: s $end

    1 s: prog

    2 prog: global_decl prog
    3     | type TK_IDENTIFICADOR function_params function_body prog
    4     | TK_PR_STATIC type TK_IDENTIFICADOR function_params function_body prog
    5     | %empty

    6 global_decl: TK_PR_STATIC type global_decl_list ';'
    7            | type global_decl_list ';'

    8 global_decl_list: TK_IDENTIFICADOR ',' global_decl_list
    9                 | TK_IDENTIFICADOR '[' TK_LIT_INT ']' ',' global_decl_list
   10                 | TK_IDENTIFICADOR
   11                 | TK_IDENTIFICADOR '[' TK_LIT_INT ']'

   12 function_params: '(' ')'
   13                | '(' function_params_list ')'

   14 function_params_list: type TK_IDENTIFICADOR ',' function_params_list
   15                     | TK_PR_CONST type TK_IDENTIFICADOR ',' function_params_list
   16                     | type TK_IDENTIFICADOR
   17                     | TK_PR_CONST type TK_IDENTIFICADOR

   18 function_body: statement_block

   19 statement_block: '{' '}'
   20                | '{' statement_list '}'

   21 statement_list: statement statement_list
   22               | statement

   23 statement: statement_block ';'
   24          | assignment ';'
   25          | local_decl ';'
   26          | in_out ';'
   27          | function_call ';'
   28          | shift ';'
   29          | control_jump ';'
   30          | control_flow ';'

   31 local_decl: TK_PR_STATIC type local_decl_list
   32           | TK_PR_CONST type local_decl_list
   33           | TK_PR_STATIC TK_PR_CONST type local_decl_list
   34           | type local_decl_list

   35 local_decl_list: TK_IDENTIFICADOR ',' local_decl_list
   36                | TK_IDENTIFICADOR
   37                | TK_IDENTIFICADOR TK_OC_LE literal ',' local_decl_list
   38                | TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR ',' local_decl_list
   39                | TK_IDENTIFICADOR TK_OC_LE literal
   40                | TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR

   41 assignment: TK_IDENTIFICADOR '=' expression
   42           | TK_IDENTIFICADOR '[' expression ']' '=' expression

   43 in_out: TK_PR_INPUT TK_IDENTIFICADOR
   44       | TK_PR_OUTPUT TK_IDENTIFICADOR
   45       | TK_PR_OUTPUT literal

   46 function_call: TK_IDENTIFICADOR '(' ')'
   47              | TK_IDENTIFICADOR '(' function_call_list ')'

   48 function_call_list: expression ',' function_call_list
   49                   | expression

   50 shift: TK_IDENTIFICADOR TK_OC_SL TK_LIT_INT
   51      | TK_IDENTIFICADOR '[' expression ']' TK_OC_SL TK_LIT_INT
   52      | TK_IDENTIFICADOR TK_OC_SR TK_LIT_INT
   53      | TK_IDENTIFICADOR '[' expression ']' TK_OC_SR TK_LIT_INT

   54 control_flow: control_if
   55             | control_for
   56             | control_while

   57 control_if: TK_PR_IF '(' expression ')' statement_block
   58           | TK_PR_IF '(' expression ')' statement_block TK_PR_ELSE statement_block

   59 control_for: TK_PR_FOR '(' assignment ':' expression ':' assignment ')' statement_block

   60 control_while: TK_PR_WHILE '(' expression ')' TK_PR_DO statement_block

   61 control_jump: TK_PR_RETURN expression
   62             | TK_PR_BREAK
   63             | TK_PR_CONTINUE

   64 expression: expression10 '?' expression10 ':' expression10
   65           | expression10

   66 expression10: expression10 TK_OC_OR expression9
   67             | expression9

   68 expression9: expression9 TK_OC_AND expression8
   69            | expression8

   70 expression8: expression8 '|' expression7
   71            | expression7

   72 expression7: expression7 '&' expression6
   73            | expression6

   74 expression6: expression6 TK_OC_EQ expression5
   75            | expression6 TK_OC_NE expression5
   76            | expression5

   77 expression5: expression5 '<' expression4
   78            | expression5 '>' expression4
   79            | expression5 TK_OC_LE expression4
   80            | expression5 TK_OC_GE expression4
   81            | expression4

   82 expression4: expression4 '+' expression3
   83            | expression4 '-' expression3
   84            | expression3

   85 expression3: expression3 '*' expression2
   86            | expression3 '/' expression2
   87            | expression3 '%' expression2
   88            | expression2

   89 expression2: expression2 '^' expression1
   90            | expression1

   91 expression1: '+' expression1
   92            | '-' expression1
   93            | '?' expression1
   94            | '!' expression1
   95            | '&' expression1
   96            | '*' expression1
   97            | '#' expression1
   98            | expression0

   99 expression0: '(' expression ')'
  100            | operand

  101 operand: TK_IDENTIFICADOR
  102        | TK_LIT_INT
  103        | TK_LIT_FLOAT
  104        | function_call
  105        | TK_IDENTIFICADOR '[' expression ']'

  106 literal: TK_LIT_INT
  107        | TK_LIT_FLOAT
  108        | TK_LIT_FALSE
  109        | TK_LIT_TRUE
  110        | TK_LIT_CHAR
  111        | TK_LIT_STRING

  112 type: TK_PR_INT
  113     | TK_PR_FLOAT
  114     | TK_PR_BOOL
  115     | TK_PR_CHAR
  116     | TK_PR_STRING


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 94
    '#' (35) 97
    '%' (37) 87
    '&' (38) 72 95
    '(' (40) 12 13 46 47 57 58 59 60 99
    ')' (41) 12 13 46 47 57 58 59 60 99
    '*' (42) 85 96
    '+' (43) 82 91
    ',' (44) 8 9 14 15 35 37 38 48
    '-' (45) 83 92
    '/' (47) 86
    ':' (58) 59 64
    ';' (59) 6 7 23 24 25 26 27 28 29 30
    '<' (60) 77
    '=' (61) 41 42
    '>' (62) 78
    '?' (63) 64 93
    '[' (91) 9 11 42 51 53 105
    ']' (93) 9 11 42 51 53 105
    '^' (94) 89
    '{' (123) 19 20
    '|' (124) 70
    '}' (125) 19 20
    error (256)
    TK_PR_INT (258) 112
    TK_PR_FLOAT (259) 113
    TK_PR_BOOL (260) 114
    TK_PR_CHAR (261) 115
    TK_PR_STRING (262) 116
    TK_PR_IF (263) 57 58
    TK_PR_THEN (264)
    TK_PR_ELSE (265) 58
    TK_PR_WHILE (266) 60
    TK_PR_DO (267) 60
    TK_PR_INPUT (268) 43
    TK_PR_OUTPUT (269) 44 45
    TK_PR_RETURN (270) 61
    TK_PR_CONST (271) 15 17 32 33
    TK_PR_STATIC (272) 4 6 31 33
    TK_PR_FOREACH (273)
    TK_PR_FOR (274) 59
    TK_PR_SWITCH (275)
    TK_PR_CASE (276)
    TK_PR_BREAK (277) 62
    TK_PR_CONTINUE (278) 63
    TK_PR_CLASS (279)
    TK_PR_PRIVATE (280)
    TK_PR_PUBLIC (281)
    TK_PR_PROTECTED (282)
    TK_PR_END (283)
    TK_PR_DEFAULT (284)
    TOKEN_ERRO (285)
    TK_OC_LE <valor_lexico.string> (286) 37 38 39 40 79
    TK_OC_GE <valor_lexico.string> (287) 80
    TK_OC_EQ <valor_lexico.string> (288) 74
    TK_OC_NE <valor_lexico.string> (289) 75
    TK_OC_AND <valor_lexico.string> (290) 68
    TK_OC_OR <valor_lexico.string> (291) 66
    TK_OC_SL <valor_lexico.string> (292) 50 51
    TK_OC_SR <valor_lexico.string> (293) 52 53
    TK_LIT_INT <valor_lexico.integer> (294) 9 11 50 51 52 53 102 106
    TK_LIT_FLOAT <valor_lexico.real> (295) 103 107
    TK_LIT_FALSE <valor_lexico.boolean> (296) 108
    TK_LIT_TRUE <valor_lexico.boolean> (297) 109
    TK_LIT_CHAR <valor_lexico.character> (298) 110
    TK_LIT_STRING <valor_lexico.string> (299) 111
    TK_IDENTIFICADOR <valor_lexico.string> (300) 3 4 8 9 10 11 14 15 16 17 35 36 37 38 39 40 41 42 43 44 46 47 50 51 52 53 101 105


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    s (70)
        on left: 1
        on right: 0
    prog <node> (71)
        on left: 2 3 4 5
        on right: 1 2 3 4
    global_decl (72)
        on left: 6 7
        on right: 2
    global_decl_list (73)
        on left: 8 9 10 11
        on right: 6 7 8 9
    function_params (74)
        on left: 12 13
        on right: 3 4
    function_params_list (75)
        on left: 14 15 16 17
        on right: 13 14 15
    function_body <node> (76)
        on left: 18
        on right: 3 4
    statement_block <node> (77)
        on left: 19 20
        on right: 18 23 57 58 59 60
    statement_list <node> (78)
        on left: 21 22
        on right: 20 21
    statement <node> (79)
        on left: 23 24 25 26 27 28 29 30
        on right: 21 22
    local_decl <node> (80)
        on left: 31 32 33 34
        on right: 25
    local_decl_list <node> (81)
        on left: 35 36 37 38 39 40
        on right: 31 32 33 34 35 37 38
    assignment <node> (82)
        on left: 41 42
        on right: 24 59
    in_out <node> (83)
        on left: 43 44 45
        on right: 26
    function_call <node> (84)
        on left: 46 47
        on right: 27 104
    function_call_list <node> (85)
        on left: 48 49
        on right: 47 48
    shift <node> (86)
        on left: 50 51 52 53
        on right: 28
    control_flow <node> (87)
        on left: 54 55 56
        on right: 30
    control_if <node> (88)
        on left: 57 58
        on right: 54
    control_for <node> (89)
        on left: 59
        on right: 55
    control_while <node> (90)
        on left: 60
        on right: 56
    control_jump <node> (91)
        on left: 61 62 63
        on right: 29
    expression <node> (92)
        on left: 64 65
        on right: 41 42 48 49 51 53 57 58 59 60 61 99 105
    expression10 <node> (93)
        on left: 66 67
        on right: 64 65 66
    expression9 <node> (94)
        on left: 68 69
        on right: 66 67 68
    expression8 <node> (95)
        on left: 70 71
        on right: 68 69 70
    expression7 <node> (96)
        on left: 72 73
        on right: 70 71 72
    expression6 <node> (97)
        on left: 74 75 76
        on right: 72 73 74 75
    expression5 <node> (98)
        on left: 77 78 79 80 81
        on right: 74 75 76 77 78 79 80
    expression4 <node> (99)
        on left: 82 83 84
        on right: 77 78 79 80 81 82 83
    expression3 <node> (100)
        on left: 85 86 87 88
        on right: 82 83 84 85 86 87
    expression2 <node> (101)
        on left: 89 90
        on right: 85 86 87 88 89
    expression1 <node> (102)
        on left: 91 92 93 94 95 96 97 98
        on right: 89 90 91 92 93 94 95 96 97
    expression0 <node> (103)
        on left: 99 100
        on right: 98
    operand <node> (104)
        on left: 101 102 103 104 105
        on right: 100
    literal <node> (105)
        on left: 106 107 108 109 110 111
        on right: 37 39 45
    type (106)
        on left: 112 113 114 115 116
        on right: 3 4 6 7 14 15 16 17 31 32 33 34


State 0

    0 $accept: . s $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 5 (prog)

    s            go to state 7
    prog         go to state 8
    global_decl  go to state 9
    type         go to state 10


State 1

  112 type: TK_PR_INT .

    $default  reduce using rule 112 (type)


State 2

  113 type: TK_PR_FLOAT .

    $default  reduce using rule 113 (type)


State 3

  114 type: TK_PR_BOOL .

    $default  reduce using rule 114 (type)


State 4

  115 type: TK_PR_CHAR .

    $default  reduce using rule 115 (type)


State 5

  116 type: TK_PR_STRING .

    $default  reduce using rule 116 (type)


State 6

    4 prog: TK_PR_STATIC . type TK_IDENTIFICADOR function_params function_body prog
    6 global_decl: TK_PR_STATIC . type global_decl_list ';'

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    type  go to state 11


State 7

    0 $accept: s . $end

    $end  shift, and go to state 12


State 8

    1 s: prog .

    $default  reduce using rule 1 (s)


State 9

    2 prog: global_decl . prog

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 5 (prog)

    prog         go to state 13
    global_decl  go to state 9
    type         go to state 10


State 10

    3 prog: type . TK_IDENTIFICADOR function_params function_body prog
    7 global_decl: type . global_decl_list ';'

    TK_IDENTIFICADOR  shift, and go to state 14

    global_decl_list  go to state 15


State 11

    4 prog: TK_PR_STATIC type . TK_IDENTIFICADOR function_params function_body prog
    6 global_decl: TK_PR_STATIC type . global_decl_list ';'

    TK_IDENTIFICADOR  shift, and go to state 16

    global_decl_list  go to state 17


State 12

    0 $accept: s $end .

    $default  accept


State 13

    2 prog: global_decl prog .

    $default  reduce using rule 2 (prog)


State 14

    3 prog: type TK_IDENTIFICADOR . function_params function_body prog
    8 global_decl_list: TK_IDENTIFICADOR . ',' global_decl_list
    9                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ',' global_decl_list
   10                 | TK_IDENTIFICADOR .
   11                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    ','  shift, and go to state 18
    '['  shift, and go to state 19
    '('  shift, and go to state 20

    $default  reduce using rule 10 (global_decl_list)

    function_params  go to state 21


State 15

    7 global_decl: type global_decl_list . ';'

    ';'  shift, and go to state 22


State 16

    4 prog: TK_PR_STATIC type TK_IDENTIFICADOR . function_params function_body prog
    8 global_decl_list: TK_IDENTIFICADOR . ',' global_decl_list
    9                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ',' global_decl_list
   10                 | TK_IDENTIFICADOR .
   11                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    ','  shift, and go to state 18
    '['  shift, and go to state 19
    '('  shift, and go to state 20

    $default  reduce using rule 10 (global_decl_list)

    function_params  go to state 23


State 17

    6 global_decl: TK_PR_STATIC type global_decl_list . ';'

    ';'  shift, and go to state 24


State 18

    8 global_decl_list: TK_IDENTIFICADOR ',' . global_decl_list

    TK_IDENTIFICADOR  shift, and go to state 25

    global_decl_list  go to state 26


State 19

    9 global_decl_list: TK_IDENTIFICADOR '[' . TK_LIT_INT ']' ',' global_decl_list
   11                 | TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 27


State 20

   12 function_params: '(' . ')'
   13                | '(' . function_params_list ')'

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 28
    ')'           shift, and go to state 29

    function_params_list  go to state 30
    type                  go to state 31


State 21

    3 prog: type TK_IDENTIFICADOR function_params . function_body prog

    '{'  shift, and go to state 32

    function_body    go to state 33
    statement_block  go to state 34


State 22

    7 global_decl: type global_decl_list ';' .

    $default  reduce using rule 7 (global_decl)


State 23

    4 prog: TK_PR_STATIC type TK_IDENTIFICADOR function_params . function_body prog

    '{'  shift, and go to state 32

    function_body    go to state 35
    statement_block  go to state 34


State 24

    6 global_decl: TK_PR_STATIC type global_decl_list ';' .

    $default  reduce using rule 6 (global_decl)


State 25

    8 global_decl_list: TK_IDENTIFICADOR . ',' global_decl_list
    9                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ',' global_decl_list
   10                 | TK_IDENTIFICADOR .
   11                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    ','  shift, and go to state 18
    '['  shift, and go to state 19

    $default  reduce using rule 10 (global_decl_list)


State 26

    8 global_decl_list: TK_IDENTIFICADOR ',' global_decl_list .

    $default  reduce using rule 8 (global_decl_list)


State 27
